--- a/app/templates/search_prototype.html
+++ b/app/templates/search_prototype.html
@@ -14,9 +14,7 @@
 
     <form class="form-inline global-search">
         <h1 id="title">
-            Stream
-        <span id="title" style="color: #5680E9;">
-          On </span>
+            Stream<span id="title" style="color: #5680E9;">On </span>
         </h1>
 
         <br><br>
