--- a/app/static/prototype1.css
+++ b/app/static/prototype1.css
@@ -31,11 +31,11 @@
 
 
     /* Rectangle 1 */
-    position: absolute;
+    position: center;
     width: 727px;
     height: 51px;
-    left: 357px;
-    top: 326px;
+    /* left: 357px; */
+    /* top: 326px; */
 
     background: #F7F3F3;
     border: 4px solid #D8CFCF;
