--- a/app/templates/search_prototype.html
+++ b/app/templates/search_prototype.html
@@ -8,8 +8,8 @@
 
 <body>
     <div class="topcorner">
-        <p>Project Name: {{ name }}</p>
-        <p>Student Name: ({{ netid }})</p>
+        <!-- <p>Project Name: {{ name }}</p>
+        <p>Student Name: ({{ netid }})</p> -->
     </div>
 
     <form class="form-inline global-search">
