Directs to results page with descriptions

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="/static/bootstrap.min.css">
     <link rel="stylesheet" href="/static/main.css">
-    <link rel="stylesheet" href="/static/temp.css">
+    <link rel="stylesheet" href="/static/prototype1.css">
 </head>
 
 <body>
@@ -14,10 +14,7 @@
 
     <form class="form-inline global-search">
         <h1 id="title">
-            Stream
-        </h1>
-        <h1 id="title1" style="color: #5680E9;">
-            On
+            stream<span id="title" style="color: #5680E9;">On </span>
         </h1>
 
         <br><br>
