--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -13,14 +13,14 @@
     </div>
 
     <form action="https://stream-on.herokuapp.com">
-        <h1 id="title">
+        <h1 id="title" style = "align-content: center;">
             stream<span id="title" style="color: #5680E9;">On </span>
         </h1>
-        <p>
+        <p style="align-content: center;">
             Sorry no result found! Please try another search!
         </p>
         <br><br>
-        <button type="submit" class="btn btn-info"> Go Back! </button>
+        <button type="submit" class="btn btn-info" style="align-content: center;"> Go Back! </button>
     </form>
 </body>
 
