--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -12,7 +12,7 @@
   </h1>
   <br>
   <div class="form-group">
-    {% for x in data %}
+    {% for x in range(len(data)) %}
     <br>
     <br>
     <p id="ans" style="text-align: center;
@@ -20,13 +20,11 @@
         background: #F7F3F3;
       border: 4px solid #D8CFCF;
       box-sizing: border-box;
-      border-radius: 25px;">{{x}}<br></p>
-    {% endfor %}
-    {% for d in descr %}
-    <div id="box1" style="text-align: center;
+      border-radius: 25px;">{{data[x]}}<br></p>
+      <div id="box1" style="text-align: center;
     color: black;">
-      {{d}}
-    </div>
+        {{descr[x]}}
+      </div>
     {% endfor %}
     <!-- <div id="box2">
       god
