--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -23,11 +23,11 @@
             <input id="query" type="text" name="search" class="form-control" placeholder="Your Input">
         </div>
         <button type="submit" class="btn btn-info"> Go! </button>
-    </form>
-    <form class="form-inline global-search">
-        <input id="not" type="text" name="notShow" class="form-control" placeholder="Shows not to include">
-        <input id="type" type="text" name="Genre" class="form-control" placeholder="Genre">
-        <input id="stream" type="text" name="platform" class="form-control" placeholder="Platforms">
+        <br>
+        <!-- <input id="not" type="text" name="notShow" class="form-control" placeholder="Shows not to include"> -->
+        <input id="type" type="text" name="genre" class="form-control" placeholder="Genre">
+        <!-- <input id="stream" type="text" name="platform" class="form-control" placeholder="Platforms"> -->
+        <input id="stream" type="text" name="free_search" class="form-control" placeholder="Type Any Keyword">
     </form>
     <form class="form-inline global-search">
         {% if data %}
