--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -11,7 +11,7 @@
     stream<span id="title" style="color: #5680E9;">On </span>
   </h1>
   <br>
-  {% for x in range(len(data)) %}
+  {% for x in range(n) %}
   <div class="form-group">
     <br>
     <br>
