--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -4,15 +4,12 @@
     <link rel="stylesheet" href="/static/bootstrap.min.css">
     <link rel="stylesheet" href="/static/main.css">
     <link rel="stylesheet" href="/static/prototype1.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Lucida+Grande&display=swap" rel="stylesheet" />
 </head>
 
 <body>
-    <div class="topcorner">
-        <p>Project Name: {{ name }}</p>
-        <p>Student Name: ({{ netid }})</p>
-    </div>
-
-    <form action="https://stream-on.herokuapp.com">
+    <form action="https://stream-on-test.herokuapp.com">
         <h1 id="title" style = "align-content: center;">
             stream<span id="title" style="color: #5680E9;">On </span>
         </h1>
