--- a/app/static/prototype1.css
+++ b/app/static/prototype1.css
@@ -1,109 +1,97 @@
- #title {
-    /* streamOn */
+#title {
+  /* streamOn */
+  font-family: Roboto Condensed;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 96px;
+  line-height: 112px;
+  text-align: center;
+  letter-spacing: -0.02em;
 
-    /*     position: absolute; */
-    /*     width: 355px;
-    height: 113px;
-    left: 543px;
-    top: 185px;
- */
-    font-family: Roboto Condensed;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 96px;
-    line-height: 112px;
-    /* identical to box height */
-    text-align: center;
-    letter-spacing: -0.02em;
+  color: #000000;
+}
 
-    color: #000000;
-  }
-
-  #query {
-    /* Group 5 */
-
-    /*     position: absolute;
-    width: 727px;
-    height: 79px;
-    left: 357px;
+#caption {
+  position: left;
+  width: 131px;
+  height: 28px;
+  /*     left: 384px;
     top: 298px; */
 
+  font-family: Lucida Grande;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 26px;
+  letter-spacing: -0.02em;
 
+  color: #8A8A8A;
+}
 
-    /* Rectangle 1 */
-    position: center;
-    width: 727px;
-    height: 51px;
-    /* left: 357px; */
-    /* top: 326px; */
+#query {
+  position: center;
+  width: 727px;
+  height: 51px;
+  /* left: 357px; */
+  /* top: 326px; */
 
-    background: #F7F3F3;
-    border: 4px solid #D8CFCF;
-    box-sizing: border-box;
-    border-radius: 25px;
-    margin: auto;
+  background: #F7F3F3;
+  border: 2px solid #D8CFCF;
+  box-sizing: border-box;
+  border-radius: 25px;
+  margin: auto;
 
+  font-family: Lucida Grande;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 26px;
+  letter-spacing: -0.02em;
 
-    /* TV Show * */
+  color: #8A8A8A;
+}
 
-    /*     position: absolute;
-    width: 131px;
-    height: 28px;
-    left: 384px;
-    top: 298px; */
+#smallquery {
+  position: center;
+  width: 363px;
+  height: 51px;
+  /* left: 136px;
+  top: 421px; */
 
-    font-family: Lucida Grande;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 22px;
-    line-height: 26px;
-    letter-spacing: -0.02em;
+  background: #F7F3F3;
+  border: 2px solid #D8CFCF;
+  box-sizing: border-box;
+  border-radius: 25px;
+  font-family: Lucida Grande;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 26px;
+  letter-spacing: -0.02em;
 
-    color: #8A8A8A;
-  }
+  color: #8A8A8A;
+}
 
+#button {
+  position: center;
+  width: 302px;
+  height: 56px;
+  /* left: 608px;
+top: 601px; */
+  border-radius: 10px;
+  background: #5680E9;
 
-  #not {
-    /* Group 2 */
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 35px;
+  line-height: 41px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: -0.02em;
+  margin: auto;
 
-    position: absolute;
-    width: 363px;
-    height: 79px;
-    left: 136px;
-    top: 393px;
+  color: #FFFFFF;
 
-
-
-    /* Rectangle 2 */
-
-    /*     position: absolute;
-    width: 363px;
-    height: 51px;
-    left: 136px;
-    top: 421px; */
-
-    background: #F7F3F3;
-    border: 4px solid #D8CFCF;
-    box-sizing: border-box;
-    border-radius: 25px;
-
-
-    /* not */
-
-    /*     position: absolute;
-    width: 50px;
-    height: 28px;
-    left: 149px;
-    top: 393px;
- */
-    font-family: Lucida Grande;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 22px;
-    line-height: 26px;
-    letter-spacing: -0.02em;
-
-    color: #8A8A8A;
-
-
-  }
+}
