--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -4,6 +4,8 @@
   <!-- <link rel="stylesheet" href="/static/bootstrap.min.css"> -->
   <link rel="stylesheet" href="/static/main.css">
   <link rel="stylesheet" href="/static/display.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Lucida+Grande&display=swap" rel="stylesheet" />
 </head>
 
 <body>
@@ -33,8 +35,9 @@
     </div> -->
   </div>
   {% endfor %}
-
-
+  <form action="https://stream-on-test.herokuapp.com">
+    <button type="submit" class="btn btn-info" style="align-content: center;"> Go Back! </button>
+  </form>
 
 </body>
 
