--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -4,15 +4,12 @@
     <link rel="stylesheet" href="/static/bootstrap.min.css">
     <link rel="stylesheet" href="/static/main.css">
     <link rel="stylesheet" href="/static/prototype1.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Lucida+Grande&display=swap" rel="stylesheet" />
 </head>
 
 <body>
-    <div class="topcorner">
-        <p>Project Name: {{ name }}</p>
-        <p>Student Name: ({{ netid }})</p>
-    </div>
-
-    <form class="form-inline global-search">
+    <form class="form-inline global-search" id="main-search">
         <h1 id="title">
             stream<span id="title" style="color: #5680E9;">On </span>
         </h1>
@@ -20,30 +17,17 @@
         <br><br>
 
         <div class="form-group">
-            <input id="query" type="text" name="search" class="form-control" placeholder="Your Input">
+            <input id="query" type="text" name="search" class="form-control" placeholder="Enter TV Show *">
+        <br><br>
+            <input id="smallquery" type="text" name="freeSearch" class="form-control" placeholder="Enter keyword">
+            <input id="smallquery" type="text" name="genre" class="form-control" placeholder="Genre">
         </div>
-        <button type="submit" class="btn btn-info"> Go! </button>
-    </form>
-    <form class="form-inline global-search">
+        <!--     <form class="form-inline global-search">
         <input id="not" type="text" name="notShow" class="form-control" placeholder="Shows not to include">
         <input id="type" type="text" name="Genre" class="form-control" placeholder="Genre">
-        <input id="stream" type="text" name="platform" class="form-control" placeholder="Platforms">
+        <input id="stream" type="text" name="platform" class="form-control" placeholder="Platforms"> -->
     </form>
-    <form class="form-inline global-search">
-        {% if data %}
-        <h1>{{output_message}}</h1>
-        {% for d in data %}
-        <br>
-        <br>
-        <p id="ans" style="text-align: center;
-        color: black;
-        background: #F7F3F3;
-      border: 4px solid #D8CFCF;
-      box-sizing: border-box;
-      border-radius: 25px;">{{d}}<br></p>
-        {% endfor %}
-        {% endif %}
-    </form>
+    <button id="button" type="submit" position="center" form="main-search"> Find Shows! </button>
 </body>
 
 </html>
