Fix back button

--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -13,14 +13,9 @@
     stream<span id="title" style="color: #5680E9;">On </span>
   </h1>
   <br>
-<<<<<<< HEAD
-=======
   {% for x in range(n) %}
->>>>>>> riya-p4
   <div class="form-group">
-    {% for x in range(len(data)) %}
-    <br>
-    <br>
+    <br><br>
     <p id="ans" style="text-align: center;
         color: black;
         background: #F7F3F3;
@@ -31,23 +26,13 @@
     color: black;">
         {{descr[x]}}
       </div>
-    {% endfor %}
-    <!-- <div id="box2">
-      god
-    </div>
-    <div id="box3">
-      me
-    </div> -->
   </div>
-<<<<<<< HEAD
-
-
-=======
   {% endfor %}
-  <form action="https://stream-on-test.herokuapp.com">
-    <button type="submit" class="btn btn-info" style="align-content: center;"> Go Back! </button>
+  <br><br>
+  <form></form>
+    <button type="submit" onclick="history.go(-1)" class="btn btn-info" style="align-content: center;"> Go Back!
+    </button>
   </form>
->>>>>>> riya-p4
 
 </body>
 
