--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -13,7 +13,7 @@
     stream<span id="title" style="color: #5680E9;">On </span>
   </h1>
   <br>
-  {% for x in range(n) %}
+  {% for x in range(data | length) %}
   <div class="form-group">
     <br><br>
     <p id="ans" style="text-align: center;
