--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <form action="https://stream-on-test.herokuapp.com">
+    <form action="https://stream-on.herokuapp.com">
         <h1 id="title" style = "align-content: center;">
             stream<span id="title" style="color: #5680E9;">On </span>
         </h1>
