--- a/app/static/main.css
+++ b/app/static/main.css
@@ -8,16 +8,35 @@
     .global-search {
         padding: 20px 0;
         text-align: center;
+
     }
 
     body {
+        position: absolute;
+        width: 100%;
+        height: 100%;
         padding-top: 15%;
         padding-bottom: 15px;
+        background-image: url("streamOn_background.png");
+
+
     }
 
     .global-search {
         text-align: center;
         padding: 10px;
+    }
+
+    .form-inline {
+      position: absolute;
+      width: 80%;
+      height: 70%;
+      left: 10%;
+      top: 15%;
+
+      background: #FFFFFF;
+      box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.5);
+      border-radius: 20px;
     }
 
     .global-search .form-control {
