--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -4,8 +4,8 @@
     <link rel="stylesheet" href="/static/bootstrap.min.css">
     <link rel="stylesheet" href="/static/main.css">
     <link rel="stylesheet" href="/static/prototype1.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Lucida+Grande&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap"" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet" />
 </head>
 
 <body>
@@ -17,7 +17,7 @@
             Sorry no result found! Please try another search!
         </p>
         <br><br>
-        <button type="submit" class="btn btn-info" style="align-content: center; position:center"> Go Back! </button>
+        <button type="submit" class="btn btn-info" id="button" style="align-content: center; position:center"> Go Back! </button>
     </form>
 </body>
 
