--- a/app/static/main.css
+++ b/app/static/main.css
@@ -17,7 +17,7 @@
         height: 100%;
         padding-top: 15%;
         padding-bottom: 15px;
-        background-image: image-url("static/streamOn_background.png");
+        background-image: url("static/streamOn_background.png");
     }
 
     .global-search {
