--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,17 +1,17 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/main.css">
-    <link rel="stylesheet" href="/static/prototype1.css">
+    <link rel="stylesheet" href="/static/bootstrap.min.css?v=1.0.0">
+    <link rel="stylesheet" href="/static/main.css?v=1.0.0">
+    <link rel="stylesheet" href="/static/prototype1.css?v=1.0.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Lucida+Grande&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet" />
 </head>
 
 <body>
     <form class="form-inline global-search" id="main-search">
         <h1 id="title">
-            stream<span id="title" style="color: #5680E9;">On </span>
+            stream<span id="title" style="color: #5680E9;">On</span>
         </h1>
         <br><br>
 
