--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet" />
 </head>
 
-<body>
+<body style="background-image: url(static/streamOn_background.png);">
     <form class="form-inline global-search" id="main-search">
         <h1 id="title">
             stream<span id="title" style="color: #5680E9;">On</span>
