--- a/app/static/main.css
+++ b/app/static/main.css
@@ -26,20 +26,20 @@
     }
 
     .form-inline {
-      position: absolute;
-      width: 80%;
-      height: 70%;
-      left: 10%;
-      top: 15%;
+        position: absolute;
+        width: 80%;
+        height: 70%;
+        left: 10%;
+        top: 15%;
 
-      background: #FFFFFF;
-      box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.5);
-      border-radius: 20px;
+        background: #FFFFFF;
+        box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.5);
+        border-radius: 20px;
     }
 
     .global-search .form-control {
         width: 500px;
-        position:center;
+        position: center;
     }
 
     .global-search * {
@@ -64,4 +64,16 @@
 .step-links a {
     color: #4285F4;
     display: inline-block;
+}
+
+.display-box {
+    position: relative;
+    width: 90%;
+    left: 5%;
+    right: 5%;
+    top: 10%;
+    bottom: 10%;
+    background: #FFFFFF;
+    box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.5);
+    border-radius: 20px;
 }
