--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet" />
 </head>
 
-<body style="background-image: url(static/streamOn_background.png); padding-left: 5%;">
+<body style="background-image: url(static/streamOn_background.png); padding-top: 5%; padding-bottom: 5%; position: relative;">
   <div class="display-box">
     <h1 id="title">
       stream<span id="title" style="color: #5680E9;">On </span>
