--- a/app/static/main.css
+++ b/app/static/main.css
@@ -5,37 +5,52 @@
 }
 
 @media (min-width:400px) {
+    
+    .selectize-control { width: 20px; }
+
     .global-search {
         padding: 20px 0;
         text-align: center;
 
     }
+    .btw{
+        font-size: 16px;
+        color: #4285F4;
+        font-family: Roboto Condensed;
+    }
 
     body {
         position: absolute;
         width: 100%;
-        height: 100%;
+        height: 115%;
         padding-top: 15%;
-        padding-bottom: 15px;
-        background-image: url("static/streamOn_background.png");
-    }
-
-    .global-search {
-        text-align: center;
-        padding: 10px;
+        padding-bottom: 15%;
+        background-image: url("../static/streamOn_background.png");
     }
 
     .form-inline {
         position: absolute;
         width: 80%;
-        height: 70%;
+        height: 84%;
         left: 10%;
-        top: 15%;
+        top: 8%;
 
         background: #FFFFFF;
         box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.5);
         border-radius: 20px;
     }
+    .slidecontainer{
+        padding-top: 20px;
+        padding-left: 20px;
+        padding-bottom: 20px;
+        padding-right: 20px;
+        background-color:whitesmoke;
+        border-radius: 20px;
+    }
+    .slid{
+        width: 240px;
+    }
+
 
     .global-search .form-control {
         width: 500px;
@@ -77,3 +92,5 @@
     box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.5);
     border-radius: 20px;
 }
+
+
