Update show/keyword sliders functionality'

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -12,7 +12,9 @@
   <script src="/static/js/selectize.min.js"></script>
 
   <style>
-    body {font-family: Helvetica, Arial, sans-serif}
+    body {
+      font-family: Helvetica, Arial, sans-serif
+    }
   </style>
 
 </head>
@@ -77,10 +79,11 @@
           <input type="range" min="0" max="100" value="0" class="slider weight" id="not-like" name="not-weight">
           <label>TV Show - Keyword</label>
           <br>
-          <input type="range" min="0" max="100" value="50" class="slider weight" id="show" name="show-weight">
+          <input type="range" min="0" max="100" value="50" class="slider weight" id="show" name="show-keyword-weight">
           <label>Not like: TV Show - Keyword</label>
           <br>
-          <input type="range" min="0" max="100" value="50" class="slider weight" id="keyword" name="keyword-weight">
+          <input type="range" min="0" max="100" value="50" class="slider weight" id="keyword"
+            name="not-like-show-keyword-weight">
         </p>
 
 
