input boxes styling

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -29,6 +29,11 @@
       font-family: Helvetica, Arial, sans-serif
     }
 
+    input{
+      border-radius: 3px;
+      border-width: 1px;
+    }
+
     .required {
       font-weight: 300;
       font-size: 16;
